# StrokkMC

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml  release.yml
assets/: basic.frag  basic.vert
src/: elementbuffer.cpp  elementbuffer.h  files.cpp  files.h  game.cpp  game.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h
src/render/: abstract_renderer.h  opengl_renderer.h
